css/styles.css
:root {
    --darkest-blue: #03254c;
    --dark-blue: #1167b1;
    --blue: #187bcd;
    --light-blue: #2a9df4;
    --white-blue: #d0efff;
    --white: #FFFFFF;
    --black: #000000;
}

body {
    all: unset;
}

html {
    box-sizing: border-box;
}

.nav-bar {
    background: var(--darkest-blue);
    border-bottom: solid var(--dark-blue) 0.30rem;
    color: var(--white);
    display: flex;
    height: 8vh;
    position: sticky;
    top: 0;
}

.nav-bar__left-item {
    padding-left: 0.8rem;
}

.nav-bar__right-item {
    padding: 0 0.8rem;
}

.push {
    margin-left: auto;
}

.welcome {
    background-color: var(--blue);
    height: 92vh;
}

.welcome__text {
    color: var(--white);
    margin: 0;
    padding-top: 5rem;
    size: 1rem;
    text-align: center;
}

